edit BotState